// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label/HoverInfoLabel Hover Info Label 1`] = `
<div>
  <p
    class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
    title="hover info"
  >
    Some label
    <svg
      aria-hidden="true"
      class="makeStyles-icon iconify iconify--mdi"
      height="1rem"
      preserveAspectRatio="xMidYMid meet"
      role="img"
      viewBox="0 0 24 24"
      width="1rem"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m-1 15h2v-6h-2v6Z"
        fill="currentColor"
      />
    </svg>
  </p>
</div>
`;

exports[`Storyshots Label/HoverInfoLabel Hover Info Label Info 1`] = `
<div>
  <p
    class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
  >
    Some label
    <svg
      aria-hidden="true"
      class="makeStyles-icon iconify iconify--mdi"
      height="1rem"
      preserveAspectRatio="xMidYMid meet"
      role="img"
      viewBox="0 0 24 24"
      width="1rem"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m-1 15h2v-6h-2v6Z"
        fill="currentColor"
      />
    </svg>
  </p>
</div>
`;
